removing parallax on ie because its not properly working because of the background-attachement:fixed issue.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -19,8 +19,12 @@ html, body {
 
 .background {
     background-repeat:no-repeat;
-    background-position:50% 50%;
-    background-position:50% 50%\9 !important;
+    background-position:100% 50%;
+}
+
+body.ie .background {
+    background-position: 100% 90%;
+    background-position: 100% 90%\9 !important;
 }
 
 .fullscreen,
@@ -30,8 +34,9 @@ html, body {
 }
 
 .content-a {
-    width: 100%;
+    width: 78%;
     display: table;
+    padding-left: 22%;
 }
 
 .not-fullscreen,
@@ -47,15 +52,15 @@ html, body {
     position:relative;
     vertical-align:middle;
     text-align:center;
-    font-size: 1.2em;
-    padding: 0 12em 100px;
+    font-size: 1.5em;
+    padding: 0 10em 100px;
     line-height: 1.8em;
 }
 
 @media (min-width: 1440px) {
     .content-b {
         padding: 0 20em 200px;
-        font-size: 1.4em;
+        font-size: 1.8em;
     }
 }
 
@@ -63,11 +68,12 @@ html, body {
     position: relative;
     bottom: 100px;
     text-align: center;
+    padding-left: 22%;
 }
 
 .background-fixed {
     background-attachment: fixed;
-    background-position: 100% 50%;
+    background-position:100% 50%;
 }
 
 .not-fullscreen {
@@ -220,7 +226,7 @@ header.left-bar nav > ul > li > a:hover {
 /* content */
 
 div.page-content {
-    margin-left: 22%;
+    /*margin-left: 22%;*/
     color: white;
     text-shadow: 0 0 1px rgba(0, 0, 0, .65), 1px 1px 1px rgba(0, 0, 0, .30), 0 0 20px rgba(0, 0, 0, 0.25);
 }
